Fix layout difference between Chrome & Safari on mobile

--- a/dibs/static/dibs-uv.css
+++ b/dibs/static/dibs-uv.css
@@ -10,7 +10,7 @@
 /* Adjustments to UV elements on the viewer page ........................... */
 
 html, body {
-  height: 100%
+  height: 100%;
 }
       
 body {
@@ -26,6 +26,10 @@ body {
 #uv-container {
   padding: 0 5px;
   overflow-x: hidden;
+  position: relative;
+}
+
+.uv-div {
   position: relative;
 }
 
@@ -170,6 +174,11 @@ screen and (max-device-width: 415px) and (-webkit-device-pixel-ratio: 2.6),
 screen and (max-device-width: 415px) and (-webkit-device-pixel-ratio: 3),
 screen and (max-device-width: 415px) and (-webkit-device-pixel-ratio: 3.5),
 screen and (max-device-width: 415px) and (-webkit-device-pixel-ratio: 4) {
+  html, body {
+    /* Undo a setting in our dibs.css that causes Safari on mobile to
+    change spacing of elements differently from Chrome. */
+    font-size: 1rem;
+  }
   #expiration-info {
     display: none;
   }
@@ -177,8 +186,6 @@ screen and (max-device-width: 415px) and (-webkit-device-pixel-ratio: 4) {
     display: none;
   }
   #mobile-loan-button {
-    display: inline-block;
-    top: -18px;
-    right: -9px;
+    display: block;
   }
 }
